# workmate_test

./: .coverage  .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_parsing_csv.py
